# blp-lib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.ps1
.claude/: settings.local.json
gui/: CMakeLists.txt  MIGRATION_PLAN.md  build.ps1  gui.rar
gui/installer/: blp_viewer.iss  build_installer.ps1
gui/shell_ext/: blp_thumbnail.cpp
gui/src/: app.cpp  app.h  blp_api.cpp  blp_api.h  blp_viewer.rc  file_dialogs.cpp  file_dialogs.h  image_io.cpp  image_io.h  image_ops.cpp  image_ops.h  image_texture.cpp  image_texture.h  image_view.cpp  image_view.h  main.cpp  settings.cpp  settings.h  style.cpp  style.h  thumbnail_cache.cpp  thumbnail_cache.h  ui_left_panel.cpp  ui_left_panel.h  ui_main.cpp  ui_main.h  ui_right_panel.cpp  ui_right_panel.h  utils.cpp  utils.h  win_integration.cpp  win_integration.h
gui/src/blp/: blp_codec.cpp  blp_codec.h
gui/tests/: blp_codec_selftest.cpp
installer/: blp_viewer.iss
qt_gui/: CMakeLists.txt  build.ps1
qt_gui/installer/: blp_viewer.iss  build_installer.ps1
qt_gui/src/: blp_api.cpp  imageview.cpp  imageview.h  main.cpp  mainwindow.cpp  mainwindow.h
shell_ext/: blp_thumbnail.cpp  blp_thumbnail.def
src/: app.cpp  app.h  blp_viewer.rc  main.cpp
src/blp/: blp_codec.cpp  blp_codec.h
src/core/: blp_api.cpp  blp_api.h  file_dialogs.cpp  file_dialogs.h  image_io.cpp  image_io.h  image_ops.cpp  image_ops.h  image_texture.cpp  image_texture.h  settings.cpp  settings.h  thumbnail_cache.cpp  thumbnail_cache.h  utils.cpp  utils.h  win_integration.cpp  win_integration.h
src/ui/: batch_convert.cpp  batch_convert.h  image_view.cpp  image_view.h  preview_manager.cpp  preview_manager.h  style.cpp  style.h  thumbnail_grid.cpp  thumbnail_grid.h  ui_compose_tab.cpp  ui_compose_tab.h  ui_left_panel.cpp  ui_left_panel.h  ui_main.cpp  ui_main.h  ui_right_panel.cpp  ui_right_panel.h
tests/: blp_codec_selftest.cpp
